--- a/MouseMaintenance/.env
+++ b/MouseMaintenance/.env
@@ -1,14 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=base64:fMgPY3uFao1SropMupEA4cVyLbPthVd+VTmWSkKk1/0=
+APP_KEY=base64:4kucsF2t5+ORuNS8UOn0fH+bRU3YA+Wg47f+Hw+N0Ec=
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
