see if this fixes my merge error

--- a/MouseMaintenance/.gitignore
+++ b/MouseMaintenance/.gitignore
@@ -4,11 +4,11 @@
 Homestead.yaml
 Homestead.json
 .env
-blade.xml
-Capstone.iml
-misc.xml
-modules.xml
-php.xml
-profiles_settings.xml
-vcs.xml
+#blade.xml
+#Capstone.iml
+#misc.xml
+#modules.xml
+#php.xml
+#profiles_settings.xml
+#vcs.xml
 
