edited migrations nullable field, transition to MySQL from sqlite. seeder adjusted

--- a/MouseMaintenance/.env
+++ b/MouseMaintenance/.env
@@ -3,7 +3,8 @@ APP_DEBUG=true
 APP_KEY=base64:4kucsF2t5+ORuNS8UOn0fH+bRU3YA+Wg47f+Hw+N0Ec=
 APP_URL=http://localhost
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
+DB_DATABASE=mouseTracks
 DB_HOST=127.0.0.1
 
 
