--- a/MouseMaintenance/.env
+++ b/MouseMaintenance/.env
@@ -4,7 +4,7 @@ APP_KEY=base64:4kucsF2t5+ORuNS8UOn0fH+bRU3YA+Wg47f+Hw+N0Ec=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_DATABASE=mouseTracks
+DB_DATABASE=squiggsn_mouse_tracker
 DB_HOST=127.0.0.1
 
 
