--- a/MouseMaintenance/composer.json
+++ b/MouseMaintenance/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "barryvdh/laravel-ide-helper": "v2.2.1",
         "laravelcollective/html": "^5.2.0",
-        "illuminate/html": "5.*"
+        "illuminate/html": "5.*",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
