--- a/MouseMaintenance/composer.json
+++ b/MouseMaintenance/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "v2.2.1",
         "laravelcollective/html": "^5.2.0",
         "illuminate/html": "5.*",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "maatwebsite/excel": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
